test/semantic_errors/invalid_abbreviation2.mc
void main() {
    bool i;
    i++; /* post-increment a bool */
}